--- a/0x00-Webpack/task_2/package.json
+++ b/0x00-Webpack/task_2/package.json
@@ -1,7 +1,6 @@
 {
   "name": "task_1",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "build": "webpack"
@@ -10,7 +9,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "css-loader": "^7.1.2",
     "file-loader": "^6.2.0",
+    "image-webpack-loader": "^8.1.0",
     "style-loader": "^4.0.0",
     "webpack": "^5.96.1",
     "webpack-cli": "^5.1.4"
@@ -18,5 +19,6 @@
   "dependencies": {
     "jquery": "^3.7.1",
     "lodash": "^4.17.21"
-  }
+  },
+  "description": ""
 }
