--- a/0x00-Webpack/task_3/package.json
+++ b/0x00-Webpack/task_3/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "build": "webpack"
+      "start-dev": "webpack serve --config task_3/webpack.config.js"
   },
   "keywords": [],
   "author": "",
