--- a/0x00-Webpack/task_3/package.json
+++ b/0x00-Webpack/task_3/package.json
@@ -3,12 +3,15 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-      "start-dev": "webpack serve --config task_3/webpack.config.js"
+      "start-dev": "webpack-dev-server --open"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {
+    "devDependencies": {
+	"webpack-dev-server": "^6.1.2",
+	"html-webpack-plugin": "^5.3.0",
+	"clean-webpack-plugin": "^3.3.1",
     "css-loader": "^7.1.2",
     "file-loader": "^6.2.0",
     "image-webpack-loader": "^8.1.0",
